--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Caroline Williams | About Me</title>
+    <title>Stephanie Willsey | About Me</title>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
@@ -13,7 +13,6 @@
     <div class="navbar" id="mynavbar">
       <a href="index.html">HOME</a>
       <a href="about.html" class="active">ABOUT ME</a>
-      <a href="resume.html">RESUME</a>
       <a href="portfolio.html">PORTFOLIO</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
@@ -31,10 +30,9 @@
   <div style="max-width: 1800px; margin: 0 auto !important; float: none !important;">
   <div class="grid_background_col2">
       <div class="about_me_center">
-        <img class="me_image" src="./images/aboutme_photo3.jpg" alt=""></img>
-          <p style="padding-right: 2.5%; padding-left:2.5%;">As a Research Assistant at Woodwell Climate Research Center, I help process, analyze, and visualize geospatial data and assess physical climate risks. Previously, I served as a Fellow for the NASA DEVELOP National Program, where I supervised teams and projects geared towards using Earth observations to address environmental issues. Before transitioning into this role, I participated in the program for two terms (Summer 2021 and Fall 2021) working on crop yield forecasting and flood detection projects.
-          <br></br>In May 2020 and June 2021, I graduated from Clark University receiving a B.A. in Environmental Science on the Earth Systems Science track and M.S. in Geographic Information Science, respectively. While pursuing my undergraduate and graduate degrees, I worked as a Remote Sensing Research Assistant and as the main Technical Support person at Clark Labs. This included working on a land cover change prediction project in partnership with ESRI and a pond aquaculture and mangrove classification project for the Gordan and Betty and Moore Foundation. While at Clark Labs, I was also responsible for providing technical assistance to users of TerrSet and IDRISI products.
-          <br></br>I hope to continue my career in remote sensing, GIS, and Earth science. I am also passionate about doing research relating to land cover change, terrestrial and coastal ecosystems, atmospheric science, and the threats we face by climate change. My goal is to increase skills in programming and utilize technology to better understand our environment.
+        <img class="me_image" src="./Images/SWillsey_2023_headshot.jpg" alt=""></img>
+          <p style="padding-right: 2.5%; padding-left:2.5%;">As of May 2024, I am a graduate research assistant at Purdue University pursuing a PhD in forestry. Previously, I was the center lead at the Goddard Space Flight Center in Maryland for the NASA DEVELOP National Program. I supervised teams and developed projects using NASA Earth observations to address environmental issues. Before becoming the GSFC center lead, I participated for two terms virtually at the CO node in the Spring of 2023 on an agriculture project assessing the drivers of production on the Western Slopes of the Rockies and at the PUP node in the Summer of 2023 on an ecological forecasting project assessing avoided soil carbon loss via conservation easements in New York.
+          <br></br> I graduated from Indiana University with a Bachelor of Arts in Psychology and minors in Counseling and Philosophy of Mind and Cognition in 2017. In 2019, I pursued my passion for forestry at the University of Maine, where I earned both a Master of Forestry and a Master of Science in Forest Resources.
           </p>
       </div>
         </div>
@@ -48,19 +46,16 @@
             <div>
               <h2 style="color: var(--accent2); font-weight: bold; font-family: 'Montserrat', sans-serif;">Research Interests</h2>
               <br>
-              <p>Remote Sensing | Land Use and Land Cover Change | Climate Change | Terrestrial Environments | ​Geospatial Analysis | Conservation</p>
+              <p>Remote Sensing | Forestry | AI | ​Geospatial Analysis </p>
             </div>
             <br>
             <div>
               <h2 style="color: var(--accent2); font-weight: bold; font-family: 'Montserrat', sans-serif;">Technical Skills</h2>
               <br>
-              <p>Python | ArcPy | R | RStudio | IDRISI TerrSet | ArcGIS | GitHub | Slack | Google Earth Pro | HTML | CSS | JavaScript | Google Earth Engine</p>
+              <p> R | RStudio | ArcGIS | GitHub | Google Earth Pro | JavaScript | Google Earth Engine</p>
             </div>
             <br>
             <div>
-              <h2 style="color: var(--accent2); font-weight: bold; font-family: 'Montserrat', sans-serif;">Certifications</h2>
-              <br>
-              <p>Certified Software Carpentry Instructor,  <i>July 2022 – Present</i></p>
             </div>
         </div>
       </div>
@@ -116,26 +111,27 @@
   <!--- Section 4: Contact Information --->
   <div class="about_me_interests_cont_pg2">
     <div class="about_me_interests_pg2">
-      <br>
+       <br>
       <h2 style="font-family: 'Montserrat', sans-serif;">Contact</h2>
       <br>
-      <p>Please feel free to contact me at my email address or through my LinkedIn Account below.</p>
+      <p> Don't hesitate to contact me at my email address below to discuss all things forestry, remote sensing, GIS, and AI!</p>
       <br>
       <h2 style="font-family: 'Montserrat', sans-serif;">Email</h2>
       <br>
-      <p>cawilliams719@gmail.com</p>
+      <p>stephaniewillsey90@gmail.com</p>
       <br>
     </div>
   </div>
   <!--- Footer --->
+  <!--- Footer --->
   <div class="top_footer">
     <p style="font-size: 24px; font-family: 'Montserrat', sans-serif;">Contact Me</p>
-    <a href="https://www.linkedin.com/in/caroline-ann-williams/"><i class="fa fa-linkedin"></i></a>
-    <a href="https://github.com/cawilliams719"><i class="fa fa-github"></i></a>
+    <a href="www.linkedin.com/in/stephanie-willsey-08992274/"><i class="fa fa-linkedin"></i></a>
+    <a href="https://github.com/StephWill1"><i class="fa fa-github"></i></a>
   </div>
   <div class="bottom_footer">
-    <p><small>&copy; Copyright 2023, Caroline Williams</small></p>
+    <p><small>&copy; Copyright 2024, Stephanie Willsey</small></p>
   </div>
-  <script src="scripts/icon.js"></script>
+  <script src="Scripts/icon.js"></script>
   </body>
 </html>
