--- a/portfolio.html
+++ b/portfolio.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Caroline Williams | Portfolio</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <title>Stephanie Willsey | Portfolio</title>
+    <link rel="stylesheet" href="Styles/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
     <!--- Navigation Bar --->
@@ -13,7 +13,6 @@
     <div class="navbar" id="mynavbar">
       <a href="index.html">HOME</a>
       <a href="about.html">ABOUT ME</a>
-      <a href="resume.html">RESUME</a>
       <a href="portfolio.html" class="active">PORTFOLIO</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
@@ -35,14 +34,12 @@
     <button class="portbtn portactive" onclick="filterSelection('all')"> Show all</button>
     <button class="portbtn" onclick="filterSelection('GIS')"> GIS</button>
     <button class="portbtn" onclick="filterSelection('remotesensing')"> Remote Sensing</button>
-    <button class="portbtn" onclick="filterSelection('webmaps')"> Web Mapping</button>
-        <button class="portbtn" onclick="filterSelection('clark')"> Clark Labs</button>
     <button class="portbtn" onclick="filterSelection('develop')"> NASA DEVELOP</button>
   </div>
 <div class="portrow">
   <div class="portcolumn GIS remotesensing develop">
     <div class="portcontent">
-      <a href="projects/NASA-DEVELOP-PUP-Projects.html" target="" class="port_txt">
+      <a href="Projects/NASA-DEVELOP-PUP-Projects.html" target="" class="port_txt">
         <img src="images/2022Spring_PUP_UHEATUrban_WebsiteImage_v2.png" alt="NASA DEVELOP PUP Projects" style="width:100%">
         <h3 style="font-family: 'Montserrat', sans-serif;">NASA DEVELOP PUP Projects</h3>
         <h4>Image Credit: NASA DEVELOP</h4>
@@ -51,7 +48,7 @@
   </div>
   <div class="portcolumn GIS remotesensing">
     <div class="portcontent">
-      <a href="projects/Mapping-Burn-Scars-using-GEE.html" target="" class="port_txt">
+      <a href="Projects/Mapping-Burn-Scars-using-GEE.html" target="" class="port_txt">
         <img src="images/wildfire_project_crop.jpg" alt="Mapping Burn Scars using Google Earth Engine JavaScript API" style="width:100%">
         <h3 style="font-family: 'Montserrat', sans-serif;">Mapping Burn Scars using Google Earth Engine JavaScript API</h3>
       </a>
@@ -59,7 +56,7 @@
   </div>
   <div class="portcolumn GIS remotesensing develop">
     <div class="portcontent">
-      <a href="projects/NASA-DEVELOP-CentralAmericaDisasters.html" target="" class="port_txt">
+      <a href="Projects/NASA-DEVELOP-CentralAmericaDisasters.html" target="" class="port_txt">
         <img src="images/2021Fall_MSFC_CentralAmericaDisasters_WebsiteImage_mycopy.jpg" alt="Central America Disasters Project" style="width:100%">
         <h3 style="font-family: 'Montserrat', sans-serif;">NASA DEVELOP Central America Disasters Fall 2021 Project</h3>
         <h4>Image Credit: NASA DEVELOP</h4>
@@ -68,16 +65,16 @@
   </div>
   <div class="portcolumn GIS remotesensing develop">
     <div class="portcontent">
-      <a href="projects/NASA-DEVELOP-ArgentinaAg.html" target="" class="port_txt">
+      <a href="Projects/NASA-DEVELOP-ArgentinaAg.html" target="" class="port_txt">
         <img src="images/2021Sum_GSFC_ArgentinaAg_WebsiteImage.jpg" class alt="Argentina Agriculture Project" style="width:100%">
         <h3 style="font-family: 'Montserrat', sans-serif;">NASA DEVELOP Argentina Agriculture Summer 2021 Project</h3>
         <h4>Image Credit: NASA DEVELOP</h4>
       </a>
     </div>
   </div>
-  <div class="portcolumn GIS remotesensing clark">
+  <div class="portcolumn GIS remotesensing">
     <div class="portcontent">
-      <a href="projects/Clark_Labs_Pond_Aquaculture.html" target="" class="port_txt">
+      <a href="Projects/Clark_Labs_Pond_Aquaculture.html" target="" class="port_txt">
       <img src="images/ClarkLabs_Pond.jpg" alt="Clark Labs Pond Aquaculture" style="width:100%">
       <h3 style="font-family: 'Montserrat', sans-serif;">Clark Labs Pond Aquaculture and Mangrove Land Cover Classification</h3>
       </a>
@@ -85,63 +82,23 @@
   </div>
   <div class="portcolumn GIS remotesensing">
     <div class="portcontent">
-      <a href="projects/WCS-Environmental-Trends-Analysis.html" target="" class="port_txt">
+      <a href="Projects/WCS-Environmental-Trends-Analysis.html" target="" class="port_txt">
       <img src="images/wcs_project_image_crop.jpg" alt="WCS Environmental Trends Analysis" style="width:100%">
       <h3 style="font-family: 'Montserrat', sans-serif;">WCS Environmental Trends Analysis Ruaha & Katavi National Parks</h3>
       </a>
     </div>
   </div>
-  <div class="portcolumn webmaps">
-    <div class="portcontent">
-      <a href="projects/USAID-Web-Mapping-Course-Project.html" target="" class="port_txt">
-      <img src="images/WM_layer_crop.jpg" alt="USAID Web Mapping Project" style="width:100%">
-      <h3 style="font-family: 'Montserrat', sans-serif;">Web Mapping Final Project USAID Prototype</h3>
-      </a>
-    </div>
-  </div>
-  <div class="portcolumn webmaps">
-    <div class="portcontent">
-      <a href="projects/Malnutrition-Health-Sites-in-Mali-Web-Mapping.html" target="" class="port_txt">
-      <img src="images/studio6_project_image_crop.jpg" alt="Car" style="width:100%">
-      <h3 style="font-family: 'Montserrat', sans-serif;">Malnutrition & Health Sites in Mali Web Mapping</h3>
-      </a>
-    </div>
-  </div>
-  <div class="portcolumn webmaps">
-    <div class="portcontent">
-      <a href="projects/studio4.html" target="" class="port_txt">
-      <img src="images/studio4.png" alt="Car" style="width:100%">
-      <h3 style="font-family: 'Montserrat', sans-serif;">Studio 4 Web Map</h3>
-      </a>
-    </div>
-  </div>
-  <div class="portcolumn webmaps">
-    <div class="portcontent">
-      <a href="projects/studio3.html" target="" class="port_txt">
-      <img src="images/studio3.png" alt="Car" style="width:100%">
-      <h3 style="font-family: 'Montserrat', sans-serif;">Studio 3 Web Map</h3>
-      </a>
-    </div>
-  </div>
   <div class="portcolumn GIS">
     <div class="portcontent">
-      <a href="projects/Vulnerability-Populations-in-Vietnam-to-Tropical-Cyclones.html" target="" class="port_txt">
+      <a href="Projects/Vulnerability-Populations-in-Vietnam-to-Tropical-Cyclones.html" target="" class="port_txt">
       <img src="images/vulnerability_project_image_v2_crop.jpg" alt="Car" style="width:100%">
       <h3 style="font-family: 'Montserrat', sans-serif;">Vulnerability of Populations in Vietnam to Tropical Cyclones</h3>
       </a>
     </div>
   </div>
-  <div class="portcolumn GIS webmaps">
-    <div class="portcontent">
-      <a href="projects/SDM_Eastern_Hemlock_Web_Application.html" target="" class="port_txt">
-      <img src="images/SDM2_layer_crop.jpg" alt="Car" style="width:100%">
-      <h3 style="font-family: 'Montserrat', sans-serif;">Eastern Hemlock Species Distribution Model Web Map</h3>
-      </a>
-    </div>
-  </div>
   <div class="portcolumn GIS">
     <div class="portcontent">
-      <a href="projects/Electric_Vehicle_Spatial_Analysis.html" target="" class="port_txt">
+      <a href="Projects/Electric_Vehicle_Spatial_Analysis.html" target="" class="port_txt">
       <img src="images/ny_fig2_crop.jpg" alt="People" style="width:100%">
       <h3 style="font-family: 'Montserrat', sans-serif;">Electric Vehicle Spatial Analysis with R</h3>
       </a>
@@ -149,21 +106,12 @@
   </div>
   <div class="portcolumn GIS">
     <div class="portcontent">
-      <a href="projects/SDM_Papio_anubis_and_hamadryas.html" target="" class="port_txt">
+      <a href="Projects/SDM_Papio_anubis_and_hamadryas.html" target="" class="port_txt">
       <img src="images/sdm_papio_anubis.jpg" alt="Car" style="width:100%">
       <h3 style="font-family: 'Montserrat', sans-serif;">Specied Distribution Model: Papio anubis and Papio hamadryas</h3>
       </a>
     </div>
   </div>
-  <div class="portcolumn GIS clark">
-    <div class="portcontent">
-      <a href="projects/Clark_Labs_ESRI_Global.html" target="" class="port_txt">
-      <img src="images/ClarkLabs_ESRI.png" alt="Car" style="width:100%">
-      <h3 style="font-family: 'Montserrat', sans-serif;">Clark Labs ESRI Global Land Cover Change Vulnerability and Prediction Mapping</h3>
-      </a>
-    </div>
-  </div>
-</div>
 <!-- END GRID -->
 </div>
 </div>
@@ -174,24 +122,23 @@
       <br>
       <h2 style="font-family: 'Montserrat', sans-serif;">Contact</h2>
       <br>
-      <p>Please feel free to contact me at my email address or through my LinkedIn Account below.</p>
+      <p>Don't hesitate to contact me at my email address below to discuss all things forestry, remote sensing, GIS, and AI!</p>
       <br>
       <h2 style="font-family: 'Montserrat', sans-serif;">Email</h2>
       <br>
-      <p>cawilliams719@gmail.com</p>
+      <p>stephaniewillsey90@gmail.com</p>
       <br>
     </div>
   </div>
   <!--- Footer --->
   <div class="top_footer">
-    <p style="font-size: 24px; font-family: 'Montserrat', sans-serif;">Contact Me</p>
-    <a href="https://www.linkedin.com/in/caroline-ann-williams/"><i class="fa fa-linkedin"></i></a>
-    <a href="https://github.com/cawilliams719"><i class="fa fa-github"></i></a>
+   <p style="font-size: 24px; font-family: 'Montserrat', sans-serif;">Contact Me</p>
+    <a href="www.linkedin.com/in/stephanie-willsey-08992274/"><i class="fa fa-linkedin"></i></a>
+    <a href="https://github.com/StephWill1"><i class="fa fa-github"></i></a>
   </div>
   <div class="bottom_footer">
-    <p><small>&copy; Copyright 2023, Caroline Williams</small></p>
+    <p><small>&copy; Copyright 2024, Stephanie Willsey</small></p>
   </div>
-  <script src="scripts/filter.js"></script>
-  <script src="scripts/icon.js"></script>
+  <script src="Scripts/icon.js"></script>
   </body>
 </html>
