--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
     </div>
     <div class="homepage_right">
-        <img src="Styles/images/web_image_background-small.jpg" class="homepage_image">
+        <img src="Styles/Images/2023Sum_NY_Eco_Conservation_WebsiteImage.png" class="homepage_image">
     </div>
   </div>
   </div>
@@ -119,13 +119,13 @@
       <div class="numbertext">3 / 4</div>
       <div class="highlight-left">
         <div class="highlight-text">
-        <h1 class="highlight-title">Central America Disasters</h1>
-        <h3 class="highlight-subtitle" style="font-weight:normal;"><i>Using Earth Observations to Map Flooding for Disaster Monitoring, Inform Potential Risk, and Prepare for Possible Response</i></h3><br>
-        <p class="highlight-maintext">This NASA DEVELOP Fall 2021 project, generated flood extent maps for Hurricanes Eta and Iota, produced hsitorical surface water maps, and examined precipitation trends during the two case study events. This analysis was conducted using NASA SERVIR's HYDRAFloods tool using Google Colab and the Google Earth Engine Python API.</p>
+        <h1 class="highlight-title">Baltimore Energy & Infrastructure</h1>
+        <h3 class="highlight-subtitle" style="font-weight:normal;"><i>Baltimore Transportation & Infrastructure: Assessing Urban Heat Vulnerability in Baltimore Neighborhoods to Inform Transportation Resiliency Planning Efforts</i></h3><br>
+        <p class="highlight-maintext">This NASA DEVELOP Spring 2024 project generated maps outlining bus routes and infrastructure that were at the most risk of experiencing the heat effects of climate change. This analysis was conducted using NASA DEVELOP's UHEAT tool via Google Earth Engine JavaScript API and R Studio.</p>
         </div>
       </div>
       <div class="highlight-right">
-      <img src="images/2021Fall_MSFC_CentralAmericaDisasters_WebsiteImage_mycopy.jpg" class="highlight-image">
+      <img src="NASA DEVELOP Website Images/2024Spring_GSFC_BaltimoreEnergy&Infrastructure_WebsiteImage.png" class="highlight-image">
       <div class="highlight-bottom-right-txt">Image Credit: NASA DEVELOP</div>
       </div>
     </div>
