--- a/Projects/NASA-DEVELOP-BaltimoreEnergyandInfrastructure.html
+++ b/Projects/NASA-DEVELOP-BaltimoreEnergyandInfrastructure.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Caroline Williams | Central America Disasters</title>
-    <link rel="stylesheet" href="../styles/style.css">
+    <title>Stephanie Willsey | Baltimore Energy & Infrastructure</title>
+    <link rel="stylesheet" href="../Styles/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
     <!--- Navigation Bar --->
@@ -13,7 +13,6 @@
     <div class="navbar" id="mynavbar">
       <a href="../index.html">HOME</a>
       <a href="../about.html">ABOUT ME</a>
-      <a href="../resume.html">RESUME</a>
       <a href="../portfolio.html" class="active">PORTFOLIO</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
@@ -34,15 +33,15 @@
     <div class="desktop">
       <div class="about_cont">
         <div class="about-left">
-          <img src="../images/2021Fall_MSFC_CentralAmericaDisasters_WebsiteImage_mycopy.jpg" class="project-image">
+          <img src="NASA DEVELOP Website Images/2024Spring_GSFC_BaltimoreEnergy&Infrastructure_WebsiteImage.png" class="project-image">
         </div>
         <div class="about-right">
           <div class="about-text">
-            <h2 style="text-align:center; padding-bottom: 5px; color: var(--darktext); font-size: 36px;font-weight: bold; font-family: 'Montserrat', sans-serif;">NASA DEVELOP Central America Disasters Fall 2021 Project</h2>
-            <h3 style="font-style: italic; text-align: center; font-weight:normal;"><i>Using Earth Observations to Map Flooding for Disaster Monitoring, Inform Potential Risk, and Prepare for Possible Response</i></h3>
+            <h2 style="text-align:center; padding-bottom: 5px; color: var(--darktext); font-size: 36px;font-weight: bold; font-family: 'Montserrat', sans-serif;">NASA DEVELOP Baltimore Energy & Infrastructure Spring 2024 Project</h2>
+            <h3 style="font-style: italic; text-align: center; font-weight:normal;"><i>Baltimore Transportation & Infrastructure: Assessing Urban Heat Vulnerability in Baltimore Neighborhoods to Inform Transportation Resiliency Planning Efforts</i></h3>
           </div>
           <div class="button_buffer">
-            <a class="button_blk" href="https://appliedsciences.nasa.gov/what-we-do/projects/using-earth-observations-map-flooding-disaster-monitoring-inform-potential-risk">Project on NASA Applied Sciences</a>
+            <a class="button_blk" href="https://www.youtube.com/watch?v=N9o-an_LIZQ">NASA DEVELOP National Program YouTube Channel</a>
           </div>
         </div>
       </div>
@@ -53,15 +52,15 @@
     <div class="tablet_device_1000px">
       <div class="project_tablet_cont">
         <div class="project-tablet-left">
-          <img src="../images/2021Fall_MSFC_CentralAmericaDisasters_WebsiteImage_mycopy.jpg" class="project-tablet-image">
+          <img src="NASA DEVELOP Website Images/2024Spring_GSFC_BaltimoreEnergy&Infrastructure_WebsiteImage.png" class="project-tablet-image">
         </div>
         <div class="project-tablet-right">
           <div class="project-tablet-text">
             <h2 style="text-align:center; padding-bottom: 15px; color: var(--darktext); font-size: 36px;font-weight: bold; font-family: 'Montserrat', sans-serif;">NASA DEVELOP Central America Disasters Fall 2021 Project</h2>
-            <h3 class="highlight-subtitle" style="font-weight:normal;"><i>Using Earth Observations to Map Flooding for Disaster Monitoring, Inform Potential Risk, and Prepare for Possible Response</i></h3><br>
+            <h3 class="highlight-subtitle" style="font-weight:normal;"><i>Baltimore Transportation & Infrastructure: Assessing Urban Heat Vulnerability in Baltimore Neighborhoods to Inform Transportation Resiliency Planning Efforts</i></h3><br>
           </div>
           <div class="button_buffer">
-            <a class="button_blk" href="https://appliedsciences.nasa.gov/what-we-do/projects/using-earth-observations-map-flooding-disaster-monitoring-inform-potential-risk">Project on NASA Applied Sciences</a>
+            <a class="button_blk" href="https://www.youtube.com/watch?v=N9o-an_LIZQ">NASA DEVELOP National Program YouTube Channel</a>
           </div>
         </div>
       </div>
@@ -78,15 +77,14 @@
           <div class="about-left">
             <div style="padding-bottom: 20px;">
               <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Team Members:</b></p>
-              <p>Caroline Williams (Project Lead)</p>
-              <p>Lauren Carey</p>
-              <p>Maria De Los Santos</P>
-              <p>Deanna Fanelli</p>
-              <p>Payton Ireland</P>
+              <p>Maya Clark (Project Lead)</p>
+              <p>Lena Kufferman</P>
+              <p>Brian Arruda</p>
+              <p>Karla Monroy</P>
             </div>
             <div style="padding-bottom: 20px;">
-              <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Fellow/Center Lead:</b></p>
-              <p>Paxton LaJoie</p>
+              <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Center Lead:</b></p>
+              <p>Stephanie Willsey</p>
             </div>
             <div style="padding-bottom: 20px;">
               <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Affiliation:</b></p>
@@ -96,20 +94,17 @@
           <div class="about-right">
             <div style="padding-bottom: 20px;">
               <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Advisors:</b></p>
-              <p>Kel Markert (NASA SERVIR Science Coordination Office)</p>
-              <p>Eric Anderson (NASA SERVIR Science Coordination Office)</p>
-              <p>Betzy Hernández (NASA SERVIR Science Coordination Office)</p>
-              <p>Dr. Emil Cherrington (NASA SERVIR Science Coordination Office)</p>
-              <p>Vanesa Martin (NASA SERVIR Science Coordination Office)</p>
-              <p>Ronan Lucey (NASA Applied Sciences Disasters Program)</p>
-              <p>Dr. Robert Griffin (University of Alabama Huntsville)</p>
-              <p>Dr. Jeffrey Luvall (NASA Marshall Space Flight Center)</p>
+              <p>Sean McCartney (Goddard Space Flight Center SSAI)</p>
             </div>
             <div style="padding-bottom: 20px;">
               <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Partners:</b></p>
-              <p>Comité Regional de Recursos Hidráulicos (CRRH)</p>
-              <p>Centro de Coordinación para la Prevención de los Desastres en América Central y República Dominicana (CEPREDENAC)</p>
-              <p>Sistema de la Integración Centroamericana (SICA)</p>
+              <p>Jennifer Martin (MDOT MTA)</p>
+              <p>Lauren Molesworth (MDOT MTA)</p>
+              <p>Kokuei Chen (MDOT MTA)</p>
+              <p>Kelly Lyles (MDOT MTA)</p>
+              <p>Paola Ariza (MDOT MTA)</p>
+              <p>Leah Visakowitz (MDOT MTA)</p>
+              <p>Kyle Kim (MDOT MTA)</p>
             </div>
           </div>
         </div>
@@ -126,15 +121,14 @@
           <div class="about-tablet-left">
             <div style="padding-bottom: 20px;">
               <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Team Members:</b></p>
-              <p>Caroline Williams (Project Lead)</p>
-              <p>Lauren Carey</p>
-              <p>Maria De Los Santos</P>
-              <p>Deanna Fanelli</p>
-              <p>Payton Ireland</P>
+              <p>Maya Clark (Project Lead)</p>
+              <p>Lena Kufferman</P>
+              <p>Brian Arruda</p>
+              <p>Karla Monroy</P>
             </div>
             <div style="padding-bottom: 20px;">
-              <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Fellow/Center Lead:</b></p>
-              <p>Paxton LaJoie</p>
+              <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Center Lead:</b></p>
+             <p>Stephanie Willsey</p>
             </div>
             <div style="padding-bottom: 20px;">
               <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Affiliation:</b></p>
@@ -144,20 +138,17 @@
           <div class="about-tablet-right">
             <div style="padding-bottom: 20px;">
               <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Advisors:</b></p>
-              <p>Kel Markert (NASA SERVIR Science Coordination Office)</p>
-              <p>Eric Anderson (NASA SERVIR Science Coordination Office)</p>
-              <p>Betzy Hernández (NASA SERVIR Science Coordination Office)</p>
-              <p>Dr. Emil Cherrington (NASA SERVIR Science Coordination Office)</p>
-              <p>Vanesa Martin (NASA SERVIR Science Coordination Office)</p>
-              <p>Ronan Lucey (NASA Applied Sciences Disasters Program)</p>
-              <p>Dr. Robert Griffin (University of Alabama Huntsville)</p>
-              <p>Dr. Jeffrey Luvall (NASA Marshall Space Flight Center)</p>
+              <p>Sean McCartney (Goddard Space Flight Center SSAI)</p>
             </div>
             <div style="padding-bottom: 20px;">
               <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Partners:</b></p>
-              <p>Comité Regional de Recursos Hidráulicos (CRRH)</p>
-              <p>Centro de Coordinación para la Prevención de los Desastres en América Central y República Dominicana (CEPREDENAC)</p>
-              <p>Sistema de la Integración Centroamericana (SICA)</p>
+              <p>Jennifer Martin (MDOT MTA)</p>
+              <p>Lauren Molesworth (MDOT MTA)</p>
+              <p>Kokuei Chen (MDOT MTA)</p>
+              <p>Kelly Lyles (MDOT MTA)</p>
+              <p>Paola Ariza (MDOT MTA)</p>
+              <p>Leah Visakowitz (MDOT MTA)</p>
+              <p>Kyle Kim (MDOT MTA)</p>
             </div>
           </div>
         </div>
@@ -169,7 +160,7 @@
   <div style="max-width: 1600px; margin: 0 auto !important; float: none !important;">
   <div class="grid_background_col2">
     <p style="color: var(--darktext); font-family: 'Montserrat', sans-serif;"><b>Abstract:</b></p>
-    <p style="padding-bottom: 20px;">In November 2020, Hurricanes Eta and Iota hit Central America within weeks of each other, causing severe flooding, landslides, and widespread damage. NASA DEVELOP partnered with Comité Regional de Recursos Hidráulicos (CRRH), Centro de Coordinación para la Prevención de los Desastres en América Central y República Dominicana (CEPREDENAC), and Sistema de la Integración Centroamericana (SICA) to better understand how flooding throughout Central America has impacted and will continue to affect communities, focusing on sites in Guatemala, Honduras, El Salvador, Belize, Nicaragua, western Panama, and eastern Costa Rica from January 2015 to October 2021. The team utilized surface reflectance data from Landsat 7 Enhanced Thematic Mapper Plus (ETM+), Landsat 8 Operational Land Imager (OLI), Sentinel-2 MultiSpectral Instrument (MSI), Suomi National Polar-orbiting Partnership (NPP) Visible Infrared Imaging Radiometer Suite (VIIRS), and Terra Moderate Resolution Imaging Spectroradiometer (MODIS). This project also utilized backscatter data from Sentinel-1 C-band Synthetic Aperture Radar (C-SAR) and elevation data from the Shuttle Radar Topography Mission (SRTM). Incorporating these Earth observations in NASA SERVIR’s Hydrologic Remote Sensing Analysis for Floods (HYDRAFloods) tool run on Google Earth Engine (GEE), the team produced historical surface water maps, a case study analysis of the two hurricanes, and a code tutorial. These results indicated that surface water increased in priority sites from 2015 to 2021, optical and SAR imagery detected similar flood patterns and extent after the hurricanes, and rainfall was concentrated on the east coast of the region. These products allow partners to make informed decisions around flooding preparation and disaster mitigation.
+    <p style="padding-bottom: 20px;">Urban heat islands (UHIs) are a rising concern across the United States, yet, despite this increased awareness, regional data about this heat are lacking or outdated for many planning agencies. Such is the case for the Maryland Transit Administration (MTA), considered a subagency of Maryland’s Department of Transportation (MDOT), which operates buses, light rail, and trains in the Baltimore-Washington Metropolitan Area. MTA is seeking UHI data to incorporate into their Adaptation and Resiliency Toolbox and ultimately inform mitigation and management efforts surrounding bus infrastructure in an equity framework. By leveraging data from Landsat 8 OLI and TIRS, Landsat 9 OLI-2 and TIRS-2, and ISS ECOSTRESS, the DEVELOP team will create maps and visualizations to assess urban heat and risk at the neighborhood scale in Baltimore, Maryland. Moreover, time permitting, the team will produce models of outdoor thermal comfort at bus stops to understand how infrastructure changes could impact temperatures.
     </p>
     <p style="color: var(--darktext); font-family: 'Montserrat', sans-serif;"><b>Project Deliverables:</b></p>
     <div class="homepage_sect2_cont">
@@ -200,23 +191,23 @@
       <br>
       <h2 style="font-family: 'Montserrat', sans-serif;">Contact</h2>
       <br>
-      <p>Please feel free to contact me at my email address or through my LinkedIn Account below.</p>
+      <p>Don't hesitate to contact me at my email address below to discuss all things forestry, remote sensing, GIS, and AI!</p>
       <br>
       <h2 style="font-family: 'Montserrat', sans-serif;">Email</h2>
       <br>
-      <p>cawilliams719@gmail.com</p>
+      <p>stephaniewillsey90@gmail.com</p>
       <br>
     </div>
   </div>
   <!--- Footer --->
   <div class="top_footer">
     <p style="font-size: 24px; font-family: 'Montserrat', sans-serif;">Contact Me</p>
-    <a href="https://www.linkedin.com/in/caroline-ann-williams/"><i class="fa fa-linkedin"></i></a>
-    <a href="https://github.com/cawilliams719"><i class="fa fa-github"></i></a>
+    <a href="www.linkedin.com/in/stephanie-willsey-08992274/"><i class="fa fa-linkedin"></i></a>
+    <a href="https://github.com/StephWill1"><i class="fa fa-github"></i></a>
   </div>
   <div class="bottom_footer">
-    <p><small>&copy; Copyright 2023, Caroline Williams</small></p>
+    <p><small>&copy; Copyright 2024, Stephanie Willsey</small></p>
   </div>
-  <script src="../scripts/icon.js"></script>
+  <script src="../Scripts/icon.js"></script>
   </body>
 </html>
