--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <div class="about-tablet-right">
         <div class="about-tablet-text">
         <h1 style="color: var(--accent2);">ABOUT ME</h1><br>
-        <p style="font-size: 20px;">My name is Stephanie Willsey. I am a graduate research assistant at Purdue University pursuing a PhD in Forestr</p>
+        <p style="font-size: 20px;">My name is Stephanie Willsey. I am a graduate research assistant at Purdue University pursuing a PhD in Forestry</p>
         </div>
         <div class="button_buffer" style="float: left;">
           <a class="button_blk" href="about.html">More About Me</a>
@@ -130,7 +130,7 @@
       </div>
     </div>
     <div class="button_buffer">
-      <a class="button_blk" href="Projects/NASA-DEVELOP-CentralAmericaDisasters.html">More About Central America Disasters</a>
+      <a class="button_blk" href="Projects/NASA-DEVELOP-BaltimoreEnergyandInfrastructure.html">More About Baltimore Energy and Infrastructure</a>
     </div>
     </div>
     <div class="mySlides fade">
