--- a/Projects/NASA-DEVELOP-WesternSlopesAg.html
+++ b/Projects/NASA-DEVELOP-WesternSlopesAg.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Caroline Williams | Central America Disasters</title>
-    <link rel="stylesheet" href="../styles/style.css">
+    <title>Stephanie Willsey | Southern Rockies Western Slope Agriculture</title>
+    <link rel="stylesheet" href="../Styles/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
     <!--- Navigation Bar --->
@@ -13,7 +13,6 @@
     <div class="navbar" id="mynavbar">
       <a href="../index.html">HOME</a>
       <a href="../about.html">ABOUT ME</a>
-      <a href="../resume.html">RESUME</a>
       <a href="../portfolio.html" class="active">PORTFOLIO</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
@@ -34,15 +33,15 @@
     <div class="desktop">
       <div class="about_cont">
         <div class="about-left">
-          <img src="../images/2021Fall_MSFC_CentralAmericaDisasters_WebsiteImage_mycopy.jpg" class="project-image">
+          <img src="NASA DEVELOP Website Images/2023Spring_CO_WesterSlopesAg_WebsiteImage.png" class="project-image">
         </div>
         <div class="about-right">
           <div class="about-text">
-            <h2 style="text-align:center; padding-bottom: 5px; color: var(--darktext); font-size: 36px;font-weight: bold; font-family: 'Montserrat', sans-serif;">NASA DEVELOP Central America Disasters Fall 2021 Project</h2>
-            <h3 style="font-style: italic; text-align: center; font-weight:normal;"><i>Using Earth Observations to Map Flooding for Disaster Monitoring, Inform Potential Risk, and Prepare for Possible Response</i></h3>
+            <h2 style="text-align:center; padding-bottom: 5px; color: var(--darktext); font-size: 36px;font-weight: bold; font-family: 'Montserrat', sans-serif;">NASA DEVELOP Southern Rockies Western Slope Agriculture Spring 2023 Project</h2>
+            <h3 style="font-style: italic; text-align: center; font-weight:normal;"><i>Identifying Drivers of Rangeland Production for Drought Planning on the Western Slope of the Southern Rockies</i></h3>
           </div>
           <div class="button_buffer">
-            <a class="button_blk" href="https://appliedsciences.nasa.gov/what-we-do/projects/using-earth-observations-map-flooding-disaster-monitoring-inform-potential-risk">Project on NASA Applied Sciences</a>
+            <a class="button_blk" href="https://appliedsciences.nasa.gov/what-we-do/projects/identifying-drivers-rangeland-production-drought-planning-western-slope">Project on NASA Applied Sciences</a>
           </div>
         </div>
       </div>
@@ -53,15 +52,15 @@
     <div class="tablet_device_1000px">
       <div class="project_tablet_cont">
         <div class="project-tablet-left">
-          <img src="../images/2021Fall_MSFC_CentralAmericaDisasters_WebsiteImage_mycopy.jpg" class="project-tablet-image">
+          <img src="NASA DEVELOP Website Images/2023Spring_CO_WesterSlopesAg_WebsiteImage.png" class="project-tablet-image">
         </div>
         <div class="project-tablet-right">
           <div class="project-tablet-text">
-            <h2 style="text-align:center; padding-bottom: 15px; color: var(--darktext); font-size: 36px;font-weight: bold; font-family: 'Montserrat', sans-serif;">NASA DEVELOP Central America Disasters Fall 2021 Project</h2>
-            <h3 class="highlight-subtitle" style="font-weight:normal;"><i>Using Earth Observations to Map Flooding for Disaster Monitoring, Inform Potential Risk, and Prepare for Possible Response</i></h3><br>
+            <h2 style="text-align:center; padding-bottom: 15px; color: var(--darktext); font-size: 36px;font-weight: bold; font-family: 'Montserrat', sans-serif;">NASA DEVELOP Southern Rockies Western Slope Agriculture Spring 2023 Project</h2>
+            <h3 class="highlight-subtitle" style="font-weight:normal;"><i>Identifying Drivers of Rangeland Production for Drought Planning on the Western Slope of the Southern Rockies</i></h3><br>
           </div>
           <div class="button_buffer">
-            <a class="button_blk" href="https://appliedsciences.nasa.gov/what-we-do/projects/using-earth-observations-map-flooding-disaster-monitoring-inform-potential-risk">Project on NASA Applied Sciences</a>
+            <a class="button_blk" href="https://appliedsciences.nasa.gov/what-we-do/projects/identifying-drivers-rangeland-production-drought-planning-western-slope">Project on NASA Applied Sciences</a>
           </div>
         </div>
       </div>
@@ -78,15 +77,14 @@
           <div class="about-left">
             <div style="padding-bottom: 20px;">
               <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Team Members:</b></p>
-              <p>Caroline Williams (Project Lead)</p>
-              <p>Lauren Carey</p>
-              <p>Maria De Los Santos</P>
-              <p>Deanna Fanelli</p>
-              <p>Payton Ireland</P>
+              <p>Adelaide Gonzalez (Project Lead)</p>
+              <p>Rachel Buchler</p>
+              <p>Max VanArnam</P>
+              <p>Stephanie Willsey</p>
             </div>
             <div style="padding-bottom: 20px;">
-              <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Fellow/Center Lead:</b></p>
-              <p>Paxton LaJoie</p>
+              <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Center Lead:</b></p>
+              <p>Sarah Hettema</p>
             </div>
             <div style="padding-bottom: 20px;">
               <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Affiliation:</b></p>
@@ -96,20 +94,17 @@
           <div class="about-right">
             <div style="padding-bottom: 20px;">
               <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Advisors:</b></p>
-              <p>Kel Markert (NASA SERVIR Science Coordination Office)</p>
-              <p>Eric Anderson (NASA SERVIR Science Coordination Office)</p>
-              <p>Betzy Hernández (NASA SERVIR Science Coordination Office)</p>
-              <p>Dr. Emil Cherrington (NASA SERVIR Science Coordination Office)</p>
-              <p>Vanesa Martin (NASA SERVIR Science Coordination Office)</p>
-              <p>Ronan Lucey (NASA Applied Sciences Disasters Program)</p>
-              <p>Dr. Robert Griffin (University of Alabama Huntsville)</p>
-              <p>Dr. Jeffrey Luvall (NASA Marshall Space Flight Center)</p>
+              <p>Chris Choi (Colorado State University, Natural Resource Ecology Lab)</p>
+              <p>Dr. Paul Evangelista (Colorado State University, Natural Resource Ecology Lab)</p>
+              <p>Dr. Catherine Jarnevich (USGS, Fort Collins Science Center)</p>
+              <p>Dr. Tony Vorster (Colorado State University, Natural Resource Ecology Lab)</p>
+              <p>Nicholas Young (Colorado State University, Natural Resource Ecology Lab)</p>
             </div>
             <div style="padding-bottom: 20px;">
               <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Partners:</b></p>
-              <p>Comité Regional de Recursos Hidráulicos (CRRH)</p>
-              <p>Centro de Coordinación para la Prevención de los Desastres en América Central y República Dominicana (CEPREDENAC)</p>
-              <p>Sistema de la Integración Centroamericana (SICA)</p>
+              <p>Colorado State University Extension USDA, US Forest Service</p>
+              <p>Bureau of Land Management, Colorado River Valley Field Office</p>
+              <p>University of Nebraska, National Drought Mitigation Center</p>
             </div>
           </div>
         </div>
@@ -126,15 +121,14 @@
           <div class="about-tablet-left">
             <div style="padding-bottom: 20px;">
               <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Team Members:</b></p>
-              <p>Caroline Williams (Project Lead)</p>
-              <p>Lauren Carey</p>
-              <p>Maria De Los Santos</P>
-              <p>Deanna Fanelli</p>
-              <p>Payton Ireland</P>
+               <p>Adelaide Gonzalez (Project Lead)</p>
+              <p>Rachel Buchler</p>
+              <p>Max VanArnam</P>
+              <p>Stephanie Willsey</p>
             </div>
             <div style="padding-bottom: 20px;">
               <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Fellow/Center Lead:</b></p>
-              <p>Paxton LaJoie</p>
+              <p>Sarah Hettema</p>
             </div>
             <div style="padding-bottom: 20px;">
               <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Affiliation:</b></p>
@@ -144,20 +138,17 @@
           <div class="about-tablet-right">
             <div style="padding-bottom: 20px;">
               <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Advisors:</b></p>
-              <p>Kel Markert (NASA SERVIR Science Coordination Office)</p>
-              <p>Eric Anderson (NASA SERVIR Science Coordination Office)</p>
-              <p>Betzy Hernández (NASA SERVIR Science Coordination Office)</p>
-              <p>Dr. Emil Cherrington (NASA SERVIR Science Coordination Office)</p>
-              <p>Vanesa Martin (NASA SERVIR Science Coordination Office)</p>
-              <p>Ronan Lucey (NASA Applied Sciences Disasters Program)</p>
-              <p>Dr. Robert Griffin (University of Alabama Huntsville)</p>
-              <p>Dr. Jeffrey Luvall (NASA Marshall Space Flight Center)</p>
+              <p>Chris Choi (Colorado State University, Natural Resource Ecology Lab)</p>
+              <p>Dr. Paul Evangelista (Colorado State University, Natural Resource Ecology Lab)</p>
+              <p>Dr. Catherine Jarnevich (USGS, Fort Collins Science Center)</p>
+              <p>Dr. Tony Vorster (Colorado State University, Natural Resource Ecology Lab)</p>
+              <p>Nicholas Young (Colorado State University, Natural Resource Ecology Lab)</p>
             </div>
             <div style="padding-bottom: 20px;">
               <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Partners:</b></p>
-              <p>Comité Regional de Recursos Hidráulicos (CRRH)</p>
-              <p>Centro de Coordinación para la Prevención de los Desastres en América Central y República Dominicana (CEPREDENAC)</p>
-              <p>Sistema de la Integración Centroamericana (SICA)</p>
+              <p>Colorado State University Extension USDA, US Forest Service</p>
+              <p>Bureau of Land Management, Colorado River Valley Field Office</p>
+              <p>University of Nebraska, National Drought Mitigation Center</p>
             </div>
           </div>
         </div>
@@ -169,7 +160,7 @@
   <div style="max-width: 1600px; margin: 0 auto !important; float: none !important;">
   <div class="grid_background_col2">
     <p style="color: var(--darktext); font-family: 'Montserrat', sans-serif;"><b>Abstract:</b></p>
-    <p style="padding-bottom: 20px;">In November 2020, Hurricanes Eta and Iota hit Central America within weeks of each other, causing severe flooding, landslides, and widespread damage. NASA DEVELOP partnered with Comité Regional de Recursos Hidráulicos (CRRH), Centro de Coordinación para la Prevención de los Desastres en América Central y República Dominicana (CEPREDENAC), and Sistema de la Integración Centroamericana (SICA) to better understand how flooding throughout Central America has impacted and will continue to affect communities, focusing on sites in Guatemala, Honduras, El Salvador, Belize, Nicaragua, western Panama, and eastern Costa Rica from January 2015 to October 2021. The team utilized surface reflectance data from Landsat 7 Enhanced Thematic Mapper Plus (ETM+), Landsat 8 Operational Land Imager (OLI), Sentinel-2 MultiSpectral Instrument (MSI), Suomi National Polar-orbiting Partnership (NPP) Visible Infrared Imaging Radiometer Suite (VIIRS), and Terra Moderate Resolution Imaging Spectroradiometer (MODIS). This project also utilized backscatter data from Sentinel-1 C-band Synthetic Aperture Radar (C-SAR) and elevation data from the Shuttle Radar Topography Mission (SRTM). Incorporating these Earth observations in NASA SERVIR’s Hydrologic Remote Sensing Analysis for Floods (HYDRAFloods) tool run on Google Earth Engine (GEE), the team produced historical surface water maps, a case study analysis of the two hurricanes, and a code tutorial. These results indicated that surface water increased in priority sites from 2015 to 2021, optical and SAR imagery detected similar flood patterns and extent after the hurricanes, and rainfall was concentrated on the east coast of the region. These products allow partners to make informed decisions around flooding preparation and disaster mitigation.
+    <p style="padding-bottom: 20px;">Over the last decade, the southern Rocky Mountains of the United States have experienced increasingly severe and variable drought. Local ranchers and landowners have reported strain on their operations, citing decreasing forage for their cattle and a need to adjust their business models. The study identified Major Land Resource Area-48 (MLRA-48) and northwestern Colorado as the key region for analysis. NASA DEVELOP partnered with the BLM Colorado River Field Office, Colorado State University Extension, USDA Forest Service, and the National Drought Mitigation Center to address concerns regarding the efficacy of remotely sensed rangeland production platforms and explore possible early warning climatic indicators of drought. The study identified two key platforms, The Rangeland Production Monitoring Service (RPMS) and Rangeland Analysis Platform (RAP), which use NASA Landsat 5 Thematic Mapper (TM), Landsat 7 Enhanced Thematic Mapper Plus (ETM+), Landsat 8 Operational Land Imager (OLI) to estimate rangeland biomass. We regressed these with in situ biomass data to validate their efficacy and found that RAP was more effective than RPMS in estimating rangeland biomass, though it presents a tendency to overestimate. Our study performed a random forest analysis, comparing monthly RAP biomass estimates to a variety of climate variables, including mean precipitation, temperature, Palmer Drought Severity Index, snow water equivalent, wind speed and direction, and vapor pressure deficit. We determined that vapor pressure deficit minimum and precipitation are key indicators in predicting forage production in MLRA-48. Our climate analysis provided our partners with greater understanding of the influence of various climate variables in determining rangeland production and allows them to assist land managers in drought mitigation.
     </p>
     <p style="color: var(--darktext); font-family: 'Montserrat', sans-serif;"><b>Project Deliverables:</b></p>
     <div class="homepage_sect2_cont">
@@ -200,23 +191,24 @@
       <br>
       <h2 style="font-family: 'Montserrat', sans-serif;">Contact</h2>
       <br>
-      <p>Please feel free to contact me at my email address or through my LinkedIn Account below.</p>
+      <p>Don't hesitate to contact me at my email address below to discuss all things forestry, remote sensing, GIS, and AI!</p>
       <br>
       <h2 style="font-family: 'Montserrat', sans-serif;">Email</h2>
       <br>
-      <p>cawilliams719@gmail.com</p>
+      <p>stephaniewillsey90@gmail.com</p>
       <br>
     </div>
   </div>
   <!--- Footer --->
-  <div class="top_footer">
-    <p style="font-size: 24px; font-family: 'Montserrat', sans-serif;">Contact Me</p>
-    <a href="https://www.linkedin.com/in/caroline-ann-williams/"><i class="fa fa-linkedin"></i></a>
-    <a href="https://github.com/cawilliams719"><i class="fa fa-github"></i></a>
+  <a href="www.linkedin.com/in/stephanie-willsey-08992274/"><i class="fa fa-linkedin"></i></a>
+    <a href="https://github.com/StephWill1"><i class="fa fa-github"></i></a>
   </div>
   <div class="bottom_footer">
-    <p><small>&copy; Copyright 2023, Caroline Williams</small></p>
+    <p><small>&copy; Copyright 2024, Stephanie Willsey</small></p>
   </div>
-  <script src="../scripts/icon.js"></script>
+  <script src="Scripts/icon.js"></script>
+  <script src="Scripts/scroll.js"></script>
+  <script src="Scripts/slider.js"></script>
+  <script src="Scripts/lazy-load.js"></script>
   </body>
 </html>
