--- a/Projects/NASA-DEVELOP-BaltimoreEnergyandInfrastructure.html
+++ b/Projects/NASA-DEVELOP-BaltimoreEnergyandInfrastructure.html
@@ -98,13 +98,7 @@
             </div>
             <div style="padding-bottom: 20px;">
               <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Partners:</b></p>
-              <p>Jennifer Martin (MDOT MTA)</p>
-              <p>Lauren Molesworth (MDOT MTA)</p>
-              <p>Kokuei Chen (MDOT MTA)</p>
-              <p>Kelly Lyles (MDOT MTA)</p>
-              <p>Paola Ariza (MDOT MTA)</p>
-              <p>Leah Visakowitz (MDOT MTA)</p>
-              <p>Kyle Kim (MDOT MTA)</p>
+              <p>Maryland Department of Transportation - Maryland Transit Administration)</p>
             </div>
           </div>
         </div>
@@ -142,13 +136,7 @@
             </div>
             <div style="padding-bottom: 20px;">
               <p style=" color: var(--accent2); font-family: 'Montserrat', sans-serif;"><b>Partners:</b></p>
-              <p>Jennifer Martin (MDOT MTA)</p>
-              <p>Lauren Molesworth (MDOT MTA)</p>
-              <p>Kokuei Chen (MDOT MTA)</p>
-              <p>Kelly Lyles (MDOT MTA)</p>
-              <p>Paola Ariza (MDOT MTA)</p>
-              <p>Leah Visakowitz (MDOT MTA)</p>
-              <p>Kyle Kim (MDOT MTA)</p>
+              <p>Maryland Department of Transportation - Maryland Transit Administration)</p>
             </div>
           </div>
         </div>
