--- a/index.html
+++ b/index.html
@@ -138,18 +138,18 @@
     <div class="numbertext">4 / 4</div>
       <div class="highlight-left">
         <div class="highlight-text">
-        <h1 class="highlight-title">Argentina Agriculture</h1>
-        <h3 class="highlight-subtitle" style="font-weight:normal;"><i>Crop Monitoring and Forecasting for Argentina using NASA Satellite Observations</i></h3><br>
-        <p class="highlight-maintext">This NASA DEVELOP Summer 2021 project, utilized the Google Earth Engine JavaScript API to create a crop monitoring forecasting tool in Argentina. These scripts utilize Terra MODIS NDVI imagery to forecast NDVI from weeks to several months. This forecasted NDVI is then used to calculate predicted crop yield for the area of interest. Supplementary to the forecasting model, the tool also looks at climate and environmental trends in the study area like soil moisture, temperature, and precipitation.</p>
+        <h1 class="highlight-title">Southern Rockies Western Slope Agriculture</h1>
+        <h3 class="highlight-subtitle" style="font-weight:normal;"><i>Identifying Drivers of Rangeland Production for Drought Planning on the Western Slope of the Southern Rockies</i></h3><br>
+        <p class="highlight-maintext">This NASA DEVELOP Spring 2023 project, utilized the Google Earth Engine JavaScript API and R to obtain information on the climatic drivers of rangeland production in the Western Slopes of the Southern Rockies.</p>
         </div>
       </div>
       <div class="highlight-right">
-      <img src="images/2021Sum_GSFC_ArgentinaAg_WebsiteImage.jpg" class="highlight-image">
+      <img src="NASA DEVELOP Website Images/2023Spring_CO_WesterSlopesAg_WebsiteImage.png" class="highlight-image">
       <div class="highlight-bottom-right-txt">Image Credit: NASA DEVELOP</div>
     </div>
     </div>
     <div class="button_buffer">
-      <a class="button_blk" href="Projects/NASA-DEVELOP-ArgentinaAg.html">More About Argentina Agriculture</a>
+      <a class="button_blk" href="NASA-DEVELOP-WesternSlopesAg.html">More About Southern Rockies Western Slope Agriculture</a>
     </div>
     </div>
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
