--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <div class="slideshow-container">
       <div class="mySlides fade">
       <div class="highlight_cont">
-        <div class="numbertext">1 / 4</div>
+        <div class="numbertext">1 / 3</div>
         <div class="highlight-left">
           <div class="highlight-text">
           <h1 class="highlight-title">NASA DEVELOP Projects</h1>
@@ -110,13 +110,9 @@
         <a class="button_blk" href="Projects/NASA-DEVELOP-PUP-Projects.html">More About NASA DEVELOP GSFC Projects</a>
       </div>
       </div>
-      <div class="button_buffer">
-        <a class="button_blk" href="http://appliedsciences.nasa.gov/join-mission/training/english/arset-monitoring-and-modeling-floods-using-earth-observations">More About ARSET Training</a>
-      </div>
-      </div>
     <div class="mySlides fade">
     <div class="highlight_cont">
-      <div class="numbertext">3 / 4</div>
+      <div class="numbertext">2 / 3</div>
       <div class="highlight-left">
         <div class="highlight-text">
         <h1 class="highlight-title">Baltimore Energy & Infrastructure</h1>
@@ -135,7 +131,7 @@
     </div>
     <div class="mySlides fade">
     <div class="highlight_cont">
-    <div class="numbertext">4 / 4</div>
+    <div class="numbertext">3 / 3</div>
       <div class="highlight-left">
         <div class="highlight-text">
         <h1 class="highlight-title">Southern Rockies Western Slope Agriculture</h1>
@@ -159,7 +155,6 @@
       <span class="dot" onclick="currentSlide(1)"></span>
       <span class="dot" onclick="currentSlide(2)"></span>
       <span class="dot" onclick="currentSlide(3)"></span>
-      <span class="dot" onclick="currentSlide(4)"></span>
     </div>
     </div>
   </div>
@@ -267,7 +262,7 @@
   </div>
   <div class="port-right">
     <h1 style="color: var(--accent2);">LATEST WORK</h1>
-      <p>Check out my latest work in remote sensing, GIS, and interactive web mapping!</p>
+      <p>Check out my latest work in remote sensing and GIS.</p>
     <div class="button_buffer">
       <a href="portfolio.html" class="button_blk">More Projects</a>
     </div>
@@ -302,7 +297,7 @@
   <!--- Footer --->
   <div class="top_footer">
     <p style="font-size: 24px; font-family: 'Montserrat', sans-serif;">Contact Me</p>
-    <a href="www.linkedin.com/in/stephanie-willsey-08992274/"><i class="fa fa-linkedin"></i></a>
+    <a href="https://www.linkedin.com/in/stephanie-willsey-08992274/"><i class="fa fa-linkedin"></i></a>
     <a href="https://github.com/StephWill1"><i class="fa fa-github"></i></a>
   </div>
   <div class="bottom_footer">
