--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
     </div>
     <div class="homepage_right">
-        <img src="Styles/Images/Gulf_hagas.png" class="homepage_image">
+        <img src="Styles/Images/Gulf_hagas.jpg" class="homepage_image">
     </div>
   </div>
   </div>
