--- a/Projects/NASA-DEVELOP-WesternSlopesAg.html
+++ b/Projects/NASA-DEVELOP-WesternSlopesAg.html
@@ -166,18 +166,13 @@
     <div class="homepage_sect2_cont">
       <ul>
         <li>
-          <a class="featured" href="../projects/documents/2021Fall_MSFC_CentralAmericaDisasters_TechPaper_FD-final.docx" target="_blank">
+          <a class="featured" href="Projects/Documents/2023Spring_CO_WesternSlopeAg_TechPaper_FD-final.docx" target="_blank">
           <p>Download <b>Technical Paper</b></p>
           </a>
         </li>
         <li>
-          <a class="featured" href="../projects/documents/2021Fall_MSFC_CentralAmericaDisasters_Presentation_FD-final.pptx" target="_blank">
-          <p>Download <b>Presentation</b></p>
-          </a>
-        </li>
-        <li>
-          <a class="featured" href="https://arcg.is/0PW1Wr" target="_blank">
-          <p>View <b>ArcGIS StoryMap</b></p>
+          <a class="featured" href="Projects/Documents/2023Spring_CO_WesternSlopeAg_Poster_FD.pdf" target="_blank">
+          <p>Download <b>Poster</b></p>
           </a>
         </li>
       </ul>
