--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           </div>
         </div>
         <div class="highlight-right">
-        <img src="NASA DEVELOP Website Images/2024Spring_GSFC_CoronadoDisasters_WebsiteImage.png" class="highlight-image">
+        <img src="NASA DEVELOP Website Images/2024Spring_GSFC_CoronadoDisasters_WebsiteImage.jpg" class="highlight-image">
         <div class="highlight-bottom-right-txt">Image Credit: NASA DEVELOP</div>
         </div>
       </div>
