--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     </div>
     <div class="homepage_right">
         <img src="Styles/Images/Gulf_hagas.jpg" class="homepage_image">
+        <img src="Styles/Images/Vermont.jpeg" class="homepage_image">
     </div>
   </div>
   </div>
