--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
       </div>
     </div>
     <div class="homepage_right">
+        <!-- First Image -->
         <img src="Styles/Images/Gulf_hagas.jpg" class="homepage_image">
+        <!-- Second Image -->
         <img src="Styles/Images/Vermont.jpeg" class="homepage_image">
     </div>
   </div>
