--- a/index.html
+++ b/index.html
@@ -37,9 +37,11 @@
         <a href="portfolio.html" class="button">Recent Work</a>
       </div>
     </div>
-    <div class="homepage_right">
+    <div class="homepage_left">
         <!-- First Image -->
         <img src="Styles/Images/Gulf_hagas.jpg" class="homepage_image">
+    </div>
+    <div class="homepage_right">
         <!-- Second Image -->
         <img src="Styles/Images/Vermont.jpeg" class="homepage_image">
     </div>
