--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       </div>
     </div>
     <div class="homepage_left">
+      <div class="image-container">
         <!-- First Image -->
         <img src="Styles/Images/Gulf_hagas.jpg" class="homepage_image">
     </div>
