--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
   </div>
 </div>
 </div>
+</div>
   <!--- Section 2: Brief About Me with Picture --->
   <!-- Desktop -->
       <div class="grid_background_col">
