--- a/index.html
+++ b/index.html
@@ -38,16 +38,20 @@
       </div>
     </div>
     <div class="homepage_left">
+      <div class="image-container">
         <!-- First Image -->
         <img src="Styles/Images/Gulf_hagas.jpg" class="homepage_image">
     </div>
     <div class="homepage_right">
+      <div class="image-container">
         <!-- Second Image -->
         <img src="Styles/Images/Vermont.jpeg" class="homepage_image">
     </div>
   </div>
   </div>
 </div>
+</div>
+</div> 
 </div>
   <!--- Section 2: Brief About Me with Picture --->
   <!-- Desktop -->
