--- a/index.html
+++ b/index.html
@@ -199,41 +199,41 @@
         </a>
       </div> -->
       <div class="column">
-        <a href="Projects/Mapping-Burn-Scars-using-GEE.html" target="">
+        <a href="Projects/NASA-DEVELOP-BaltimoreEnergyandInfrastructure.html" target="">
           <div class="container">
-            <img data-src="./images/wildfire_project_crop.jpg" class="image">
+            <img data-src="ESRI_CartographyMOOC_2024/Hurricanes.png" class="image">
             <div class="overlay">
-              <div class="grid_text">Mapping Burn Scars using Google Earth Engine JavaScript API</div>
+              <div class="grid_text">Mapping Hurricanes Since 1700s using ArcGIS Pro</div>
             </div>
           </div>
         </a>
       </div>
       <div class="column">
-        <a href="Projects/USAID-Web-Mapping-Course-Project.html" target="">
+        <a href="Projects/NASA-DEVELOP-BaltimoreEnergyandInfrastructure.html" target="">
           <div class="container">
-            <img data-src="./images/WM_layer_crop.jpg" class="image">
+            <img data-src="ESRI_CartographyMOOC_2024/Small Multiple Layout.pdf" class="image">
             <div class="overlay">
-              <div class="grid_text">Web Mapping Final Project USAID Prototype</div>
+              <div class="grid_text">Mapping Earthquakes using ArcGIS Pro</div>
             </div>
           </div>
         </a>
       </div>
       <div class="column">
-        <a href="Projects/WCS-Environmental-Trends-Analysis.html" target="">
+        <a href="Projects/NASA-DEVELOP-BaltimoreEnergyandInfrastructure.html" target="">
           <div class="container">
-            <img data-src="./images/wcs_project_image_crop.jpg" class="image">
+            <img data-src="ESRI_CartographyMOOC_2024/Spilhaus_Layout_Steph_Willsey.jpg" class="image">
             <div class="overlay">
-              <div class="grid_text">WCS Environmental Trends Analysis Ruaha & Katavi National Parks</div>
+              <div class="grid_text">Mapping Earth's Ocean using ArcGIS Pro</div>
             </div>
           </div>
         </a>
       </div>
       <div class="column">
-        <a href="Projects/Vulnerability-Populations-in-Vietnam-to-Tropical-Cyclones.html" target="">
+        <a href="Projects/NASA-DEVELOP-BaltimoreEnergyandInfrastructure.html" target="">
           <div class="container">
-            <img data-src="./images/vulnerability_project_image_v2_crop.jpg" class="image">
+            <img data-src="ESRI_CartographyMOOC_2024/ShipRace.mp4" class="image">
             <div class="overlay">
-              <div class="grid_text">Vulnerability of Populations in Vietnam to Tropical Cyclones</div>
+              <div class="grid_text">Creating GIFs using Shipping Records from the 1700s in ArcGIS Pro</div>
             </div>
           </div>
         </a>
