--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="grid_background_col">
           <div class="desktop">
     <div class="about_cont">
-      <div class="about-left">
+      <div class="about-right">
       <img src="Images/SWillsey_2023_headshot.jpg" class="about-image">
         <!-- <div class="border-line"></div> -->
       </div>
